--- a/style.css
+++ b/style.css
@@ -74,6 +74,10 @@ margin-bottom: 8rem;
   font-size: 30px;
   margin: 20px 0px 90px 0px;
 }
+#paragraph4{
+  background-color: #e7f1f8;
+  padding: 90px 30px 90px 30px;
+}
 .job{
   text-align: center;
   font-size: 20px;
