--- a/style.css
+++ b/style.css
@@ -33,6 +33,249 @@ header {
 .btn {
   border-radius: 7px !important;
 }
+#button1{
+  margin-top: 100px;
+  width: 16rem;
+  height: 4rem;
+  background-color: #eb7d4b;
+  color: #FFF;
+  text-transform: uppercase;
+  box-shadow: 0px 4px #c86a40;
+margin-bottom: 8rem;
+}
+#button1:hover{
+  background-color: #c86a40;
+  color: #FFF;
+}
+#paragraph2{
+  background-color: #17c2a4;
+  padding: 90px 30px 90px 30px;
+}
+#titoloP2{
+  font-size: 90px;
+}
+#descrizioneP2{
+  font-size: 30px;
+}
+.card-title{
+  font-size: 30px;
+}
+.card-text{
+  font-size: 17px;
+}
+.card{
+  align-items: center;
+  margin-top: 40px;
+}
+.card-img-top{
+  height: 100px;
+  width: 100px;
+}
+#paragraph3{
+  background-color: #dcdcdc;
+  padding: 90px 30px 90px 30px;
+}
+#descrizioneP3{
+  font-size: 30px;
+  margin: 20px 0px 90px 0px;
+}
+#paragraph4{
+  background-color: #ffffff;
+  padding: 90px 30px 90px 30px;
+}
+/* SOCIAL MEDIA BUTTONS */
+
+.socialicon{
+  margin: 0px 10px 0px 4px;
+  border-radius: 50%;
+}
+#anne{
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+}
+#kate{
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+}
+#olivia{
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+}
+#ashley{
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+}
+#paragraph4{
+  background-color: #e7f1f8;
+  padding: 90px 30px 90px 30px;
+}
+.job{
+  text-align: center;
+  font-size: 20px;
+  color: #64c6ea;
+}
+.progress{
+    width: 150px;
+    height: 150px;
+    line-height: 150px;
+    background: none;
+    margin: 0 auto;
+    box-shadow: none;
+    position: relative;
+}
+.progress:after{
+    content: "";
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border: 12px solid #fff;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.progress > span{
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    z-index: 1;
+}
+.progress .progress-left{
+    left: 0;
+}
+.progress .progress-bar{
+    width: 100%;
+    height: 100%;
+    background: none;
+    border-width: 12px;
+    border-style: solid;
+    position: absolute;
+    top: 0;
+}
+.progress .progress-left .progress-bar{
+    left: 100%;
+    border-top-right-radius: 80px;
+    border-bottom-right-radius: 80px;
+    border-left: 0;
+    -webkit-transform-origin: center left;
+    transform-origin: center left;
+}
+.progress .progress-right{
+    right: 0;
+}
+.progress .progress-right .progress-bar{
+    left: -100%;
+    border-top-left-radius: 80px;
+    border-bottom-left-radius: 80px;
+    border-right: 0;
+    -webkit-transform-origin: center right;
+    transform-origin: center right;
+    animation: loading-1 1.8s linear forwards;
+}
+.progress .progress-value{
+    width: 90%;
+    height: 90%;
+    border-radius: 50%;
+    background: #44484b;
+    font-size: 24px;
+    color: #fff;
+    line-height: 135px;
+    text-align: center;
+    position: absolute;
+    top: 5%;
+    left: 5%;
+}
+.progress.blue .progress-bar{
+    border-color: #049dff;
+}
+.progress.blue .progress-left .progress-bar{
+    animation: loading-2 1.5s linear forwards 1.8s;
+}
+.progress.yellow .progress-bar{
+    border-color: #eb7d4b;
+}
+.progress.yellow .progress-left .progress-bar{
+    animation: loading-1.7 1.5s linear forwards 1.8s;
+}
+.progress.pink .progress-bar{
+    border-color: #d74680;
+}
+.progress.pink .progress-left .progress-bar{
+    animation: loading-3 0.4s linear forwards 1.8s;
+}
+.progress.green .progress-bar{
+    border-color: #15c7a8;
+}
+.progress.green .progress-left .progress-bar{
+    animation: loading-3.7 1.5s linear forwards 1.8s;
+}
+@keyframes loading-1{
+    0%{
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100%{
+        -webkit-transform: rotate(180deg);
+        transform: rotate(180deg);
+    }
+}
+@keyframes loading-2{
+    0%{
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100%{
+        -webkit-transform: rotate(144deg);
+        transform: rotate(144deg);
+    }
+}
+@keyframes loading-3{
+    0%{
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100%{
+        -webkit-transform: rotate(90deg);
+        transform: rotate(90deg);
+    }
+}
+@keyframes loading-4{
+    0%{
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100%{
+        -webkit-transform: rotate(36deg);
+        transform: rotate(36deg);
+    }
+}
+@keyframes loading-5{
+    0%{
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100%{
+        -webkit-transform: rotate(126deg);
+        transform: rotate(126deg);
+    }
+}
+@media only screen and (max-width: 990px){
+    .progress{ margin-bottom: 20px; }
+}
+h3{
+  margin-top: 20px;
+  margin-bottom: 90px;
+  text-transform: uppercase;
+}
 
 #portfolio {
   min-height: 100%;
